--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,1 @@
-.path-local-macromucho textarea {white-space: nowrap; tab-size: 60; -moz-tab-size: 60;}
+.path-local-macromucho textarea {white-space: pre; tab-size: 60; -moz-tab-size: 60;}
